--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,32 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "ag-grid-community": "^21.1.0",
-    "ag-grid-react": "^21.1.0",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.32",
+    "ag-grid-community": "^21.2.2",
+    "ag-grid-react": "^21.2.2",
     "braces": "^3.0.2",
     "dotenv": "^7.0.0",
     "material-design-icons": "^3.0.1",
     "node-gyp": "^3.8.0",
     "notistack": "^0.7.0",
-    "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^5.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^5.1.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
-    "react-virtualized": "^9.21.0",
-    "react-websocket": "^2.0.1",
-    "redux": "^4.0.1",
+    "react-virtualized": "^9.21.2",
+    "react-websocket": "^2.1.0",
+    "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "sockjs": "^0.3.19",
-    "sockjs-client": "^1.3.0",
-    "tar": "^4.4.8",
+    "sockjs-client": "^1.4.0",
+    "tar": "^4.4.13",
     "typeface-roboto": "0.0.54",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
