--- a/my-app/.env.production
+++ b/my-app/.env.production
@@ -5,5 +5,6 @@ REACT_APP_hi="prod"
 REACT_APP_BACKEND_HOST = "http://ec2-18-223-134-101.us-east-2.compute.amazonaws.com"
 REACT_APP_BACKEND_PORT = 5000
 REACT_APP_BACKEND_PORT_MIDDLE = 5001
+REACT_APP_BACKEND_PORT_FAVORITES = 5002
 
 NODE_PATH=src/
