--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .gitignore
 *.log
 .DS_Store
-.BuildServer
-.idea
-.pynb_checkpoints
+.BuildServer/
+.idea/
+.pynb_checkpoints/
 
 databases/.DS_Store
 .idea/workspace.xml
